chois-backend-bff/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chois-backend-bff
  namespace: chois
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: chois-backend-bff
