chois-backend-bff/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chois-backend-bff
  namespace: chois
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "chois-backend-bff.choisproject.chuyong.kr"
        - "gateway.choisproject.kr"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTP
      hosts:
        - 'chois-backend-bff.choisproject.chuyong.kr'
        - "gateway.choisproject.kr"
